--- a/sass/components/_first_section.scss
+++ b/sass/components/_first_section.scss
@@ -11,7 +11,7 @@
   background-position: 50% 50%;
   background-size: 1600px;
   padding: 200px 452px;
-  
+
   &__header {
     display: flex;
     text-align: center;
@@ -37,5 +37,13 @@
     border: 0px;
     cursor: pointer;
     padding: 10px 41px 10px 42px;
+    transition: background-color var(--transition-duration) var(--cubic-bezier),
+      color var(--transition-duration) var(--cubic-bezier);
+
+    &:hover,
+    &:focus {
+      background-color: var(--white-background);
+      color: var(--blue-color);
+    }
   }
 }
