dodano wrapper do headera

--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -3,6 +3,9 @@
   align-items: center;
   justify-content: space-between;
   padding-block: 24px 25px;
+}
+.wrapper {
+  margin: auto;
   border-bottom: 1px solid #ececec;
 }
 .logo {
