dodano zamykacz menu

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -27,3 +27,6 @@
 @import "./components/portfolio_grid.scss";
 
 @import "./components/portfolio_buttons.scss";
+@import "./components/mobile-menu.scss";
+
+@import "./utils/display-none.scss";
