--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -4,11 +4,41 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  background-color: white;
+  background-color: beige;
   z-index: 2;
+  padding-left: 40px;
+  padding-block: 48px;
 }
-
+.mobile-menu__navigation {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+  margin-bottom: auto;
+}
+.mobile-menu__contacts {
+  margin-block: 40px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+.mobile-menu__social {
+  display: flex;
+  padding-left: 0;
+  margin: 0;
+  gap: 10px;
+}
+.mobile-menu__social-item {
+  color: var(--blue-color);
+  padding-right: 10px;
+  border-right: 1px solid rgba(33 33 33 / 0.2);
+  &:last-child {
+    border: none;
+  }
+}
 .toggle-menu {
+  position: absolute;
+  top: 21px;
+  right: 21px;
   display: flex;
   align-items: center;
   width: 30px;
@@ -25,6 +55,6 @@
   margin: 0;
 
   @media screen and (max-width: 767px) {
-    display: block;
+    display: flex;
   }
 }
