--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -47,7 +47,7 @@
   cursor: pointer;
 }
 .menu-opener {
-  //   display: none;
+  display: none;
   cursor: pointer;
   padding: 0;
   border: none;
