--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -4,6 +4,19 @@
   justify-content: space-between;
   padding-block: 24px 25px;
 }
+.header__contact-wrapper {
+  display: none;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-direction: column;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
+  }
+}
+
 .wrapper {
   margin: auto;
   border-bottom: 1px solid #ececec;
