--- a/sass/utils/_globals.scss
+++ b/sass/utils/_globals.scss
@@ -5,8 +5,17 @@ body {
   color: var(--main-font-color);
 }
 .container {
-  width: 1200px;
+  // width: 1200px;
   margin: 0 auto;
+  @media screen and (min-width: 480px) {
+    width: 480px;
+  }
+  @media screen and (min-width: 768px) {
+    width: 768px;
+  }
+  @media screen and (min-width: 768px) {
+    width: 1200px;
+  }
 }
 .section {
   padding: 94px 0;
