--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,26 +1,32 @@
+.wrapper {
+  margin: auto;
+  border-bottom: 1px solid #ececec;
+}
+
 .header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding-block: 24px 25px;
+  // padding-block: 24px 25px;
+  height: 80px;
 }
 .header__contact-wrapper {
   display: none;
+
   @media screen and (min-width: 768px) {
     display: flex;
     flex-direction: column;
+    gap: 10px;
+    margin: auto;
   }
   @media screen and (min-width: 1200px) {
     display: flex;
     flex-direction: row;
     gap: 30px;
+    margin: auto;
   }
 }
 
-.wrapper {
-  margin: auto;
-  border-bottom: 1px solid #ececec;
-}
 .logo {
   font-family: "Raleway", sans-serif;
   text-decoration: none;
