--- a/sass/components/_first_section.scss
+++ b/sass/components/_first_section.scss
@@ -6,10 +6,10 @@
   flex-direction: column;
   align-items: center;
   background: var(--main-image-linear-gradient);
-  background-image: url(../images/buisness-section-background.jpg);
+  background-image: url(../images/hero-lg-1x.jpg);
   background-repeat: no-repeat;
-  background-position: 50% 50%;
-  background-size: 1600px;
+  background-position: center;
+  background-size: cover;
   padding: 200px 452px;
 
   &__header {
