--- a/sass/components/_first_section.scss
+++ b/sass/components/_first_section.scss
@@ -1,49 +1,124 @@
 .section-primary {
   max-width: 1600px;
-  height: 600px;
+  padding: 118px 0;
   margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background: var(--main-image-linear-gradient);
-  background-image: url(../images/hero-lg-1x.jpg);
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: center center;
   background-size: cover;
-  padding: 200px 452px;
 
-  &__header {
-    display: flex;
-    text-align: center;
-    align-items: center;
-    width: 696px;
-    height: 120px;
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
-    letter-spacing: 0.06em;
-    color: #ffffff;
-    margin: auto;
+  background-color: #c4c4c4;
+  background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/hero-sm@1x.jpg);
+
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    );
   }
-  &__button {
-    font-family: "Roboto", sans-serif;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.87;
-    color: #ffffff;
-    background: var(--blue-color);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-    border: 0px;
-    cursor: pointer;
-    padding: 10px 41px 10px 42px;
-    transition: background-color var(--transition-duration) var(--cubic-bezier),
-      color var(--transition-duration) var(--cubic-bezier);
-
-    &:hover,
-    &:focus {
-      background-color: var(--white-background);
-      color: var(--blue-color);
+  @media screen and (min-width: 768px) {
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/hero-md@1x.jpg);
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: linear-gradient(
+          to right,
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url(../images/hero-md@2x.jpg);
     }
+  }
+  @media screen and (min-width: 1200px) {
+    max-width: 1600px;
+    margin: 0 auto;
+    padding: 200px 0;
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/hero-lg@1x.jpg);
+
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: linear-gradient(
+          to right,
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url(../images/hero-lg@2x.jpg);
+    }
+  }
+}
+.section-primary__header {
+  display: flex;
+  text-align: center;
+  align-items: center;
+  width: 696px;
+  height: 120px;
+  font-weight: 900;
+  font-size: 26px;
+  line-height: calc(42 / 26);
+  letter-spacing: 0.06em;
+  color: #ffffff;
+  margin: auto;
+  @media screen and (min-width: 768px) {
+  }
+  @media screen and (min-width: 1200px) {
+    font-size: 44px;
+    line-height: calc(60 / 44);
+  }
+}
+.section-primary__title-position {
+  margin-bottom: 30px;
+  @media screen and (min-width: 480px) {
+    width: 360px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  @media screen and (min-width: 768px) {
+  }
+  @media screen and (min-width: 1200px) {
+    width: 696px;
+  }
+}
+
+.section-primary__button {
+  width: 200px;
+  height: 50px;
+  display: block;
+  margin: auto;
+  border-radius: 4px;
+  border: 0px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  cursor: pointer;
+  color: #ffffff;
+  background: var(--blue-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  // padding: 10px 41px 10px 42px;
+  transition: background-color var(--transition-duration) var(--cubic-bezier),
+    color var(--transition-duration) var(--cubic-bezier);
+
+  &:hover,
+  &:focus {
+    background-color: var(--white-background);
+    color: var(--blue-color);
   }
 }
