--- a/sass/components/_offer_section.scss
+++ b/sass/components/_offer_section.scss
@@ -1,3 +1,10 @@
+.offer-container {
+  display: none;
+  @media screen and (min-width: 1200px) {
+    display: block;
+  }
+}
+
 .offer-header {
   display: flex;
   justify-content: center;
