--- a/sass/components/_clients_section.scss
+++ b/sass/components/_clients_section.scss
@@ -2,11 +2,18 @@
   padding: 0;
   list-style-type: none;
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 30px;
+  justify-content: center;
+
+  @media screen and (min-width: 1200px) {
+    flex-wrap: nowrap;
+  }
 
   &__icon {
     display: flex;
     padding: 16px 32px;
+
     border: 1px solid var(--grey-icon-color);
     border-radius: 4px;
     fill: var(--grey-icon-color);
@@ -24,8 +31,13 @@
   display: flex;
   justify-content: center;
   font-weight: 700;
-  font-size: 36px;
+  font-size: 28px;
   line-height: 1.16;
   margin-top: 0;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+    font-size: 36px;
+  }
 }
