footer przed skończeniem newslettera

--- a/sass/components/_contact.scss
+++ b/sass/components/_contact.scss
@@ -30,3 +30,10 @@
     }
   }
 }
+.contact-item-footer {
+  @media screen and (max-width: 1199px) {
+    display: flex;
+    justify-content: center;
+    margin: 0;
+  }
+}
