--- a/sass/components/_newsletter.scss
+++ b/sass/components/_newsletter.scss
@@ -10,25 +10,41 @@
   }
 }
 .newsletter {
-  margin-left: 108px;
+  @media screen and (min-width: 1200px) {
+    margin-left: 108px;
+  }
 
   &__fieldset {
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
-    width: 358px;
-    margin-right: 12px;
+    width: 450px;
+    margin-right: 0px;
     margin-bottom: 0px;
+
+    @media screen and (min-width: 1200px) {
+      width: 358px;
+      margin-right: 12px;
+      margin-bottom: 0px;
+    }
   }
   &__form {
     display: flex;
+    flex-direction: column;
+
+    @media screen and (min-width: 1200px) {
+      flex-direction: row;
+    }
   }
 }
 .newsletter__button {
-  display: flex;
+  position: relative;
+  width: 200px;
+  height: 50px;
+  display: inline-block;
   justify-content: center;
   align-items: center;
-  padding: 10px 28px 10px 42px;
+  padding: 10px 42px 10px 0px;
   background: var(--blue-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
@@ -41,7 +57,10 @@
   cursor: pointer;
 
   &--icon {
+    position: absolute;
+    top: 13px;
+    right: 28px;
     fill: var(--white-background);
-    margin-left: 24px;
+    // margin-left: 24px;
   }
 }
