--- a/sass/components/_clients_section.scss
+++ b/sass/components/_clients_section.scss
@@ -13,6 +13,7 @@
   &__icon {
     display: flex;
     padding: 16px 32px;
+    width: 100%;
 
     border: 1px solid var(--grey-icon-color);
     border-radius: 4px;
