--- a/sass/components/_portfolio_buttons.scss
+++ b/sass/components/_portfolio_buttons.scss
@@ -2,9 +2,18 @@
   list-style-type: none;
   padding: 0px;
   display: flex;
-  justify-content: center;
-  gap: 8px;
-  margin-bottom: 56px;
+  flex-wrap: wrap;
+  row-gap: 15px;
+  column-gap: 15px;
+  margin-bottom: 40px;
+
+  @media screen and (min-width: 768px) {
+    justify-content: center;
+    gap: 8px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+  }
 }
 .button {
   font-family: "Roboto", sans-serif;
