--- a/sass/components/_second_section.scss
+++ b/sass/components/_second_section.scss
@@ -31,10 +31,15 @@
 }
 
 .section-secondary__header {
+  text-align: center;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   margin-top: 30px;
+
+  @media screen and (min-width: 768px) {
+    text-align: start;
+  }
 }
 
 .section-secondary__description {
@@ -44,7 +49,6 @@
   color: var(--description-color);
 }
 .section-secondary__item {
-  
   @media screen and (min-width: 768px) {
     flex-basis: 354px;
   }
