--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,27 +1,34 @@
 .mobile-menu {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
-  background-color: beige;
+  width: 100%;
+  height: 100%;
+  background-color: white;
   z-index: 2;
-  padding-left: 40px;
-  padding-block: 48px;
+  padding: 48px 40px;
 }
 .mobile-menu__navigation {
+  margin-bottom: auto;
+}
+
+.mobile-menu__list {
   display: flex;
   flex-direction: column;
   gap: 32px;
   margin-bottom: auto;
 }
 .mobile-menu__contacts {
+  position: absolute;
+  bottom: 70px;
   margin-block: 40px;
   display: flex;
   flex-direction: column;
   gap: 30px;
 }
 .mobile-menu__social {
+  position: absolute;
+  bottom: 48px;
   display: flex;
   padding-left: 0;
   margin: 0;
