--- a/sass/components/_portfolio_grid.scss
+++ b/sass/components/_portfolio_grid.scss
@@ -2,10 +2,22 @@
   list-style-type: none;
   padding: 0px;
   display: flex;
-  align-items: center;
+  justify-content: center;
+  align-items: stretch;
   flex-wrap: wrap;
-  flex-basis: calc((100% - 60px) / 3);
-  gap: 30px;
+  // flex-basis: calc((100% - 60px) / 3);
+  gap: 25px;
+
+  @media screen and (min-width: 480px) {
+    grid-template-columns: auto;
+  }
+  @media screen and (min-width: 768px) {
+    grid-template-columns: auto auto;
+    justify-content: start;
+  }
+  @media screen and (min-width: 1200px) {
+    grid-template-columns: auto auto auto;
+  }
 
   &__box {
     display: flex;
@@ -13,6 +25,14 @@
     margin-bottom: 0;
     transition: box-shadow var(--transition-duration) var(--cubic-bezier);
     will-change: box-shadow;
+
+    // @media screen and (min-width: 768px) {
+    //   flex-basis: calc((100% - 30px * (2 - 1)) / 2);
+    // }
+
+    // @media screen and (min-width: 1200px) {
+    //   flex-basis: calc((100% - 30px * (3 - 1)) / 3);
+    // }
 
     &:hover {
       box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
