--- a/sass/utils/_globals.scss
+++ b/sass/utils/_globals.scss
@@ -7,6 +7,7 @@ body {
 .container {
   // width: 1200px;
   margin: 0 auto;
+  padding-inline: 15px;
   @media screen and (min-width: 480px) {
     width: 480px;
   }
