dostosowano fieldset w newsletterze

--- a/sass/components/_newsletter.scss
+++ b/sass/components/_newsletter.scss
@@ -22,6 +22,10 @@
     margin-inline: auto;
     margin-bottom: 20px;
 
+    @media screen and (max-width: 500px) {
+      width: 100%;
+    }
+
     @media screen and (min-width: 1200px) {
       width: 358px;
       margin-right: 12px;
