dodano zdjęcia i pozmieniano nazwy plików

--- a/sass/components/_first_section.scss
+++ b/sass/components/_first_section.scss
@@ -68,7 +68,7 @@
   display: flex;
   text-align: center;
   align-items: center;
-  width: 696px;
+  // width: 696px;
   height: 120px;
   font-weight: 900;
   font-size: 26px;
