--- a/sass/components/_first_section.scss
+++ b/sass/components/_first_section.scss
@@ -18,10 +18,11 @@
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
     background-image: linear-gradient(
-      to right,
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    );
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/hero-sm@2x.jpg);
   }
   @media screen and (min-width: 768px) {
     background-image: linear-gradient(
