--- a/sass/components/_contact.scss
+++ b/sass/components/_contact.scss
@@ -29,6 +29,9 @@
       fill: var(--blue-color);
     }
   }
+  &__icon-opener {
+    fill: black;
+  }
 }
 .contact-item-footer {
   @media screen and (max-width: 1199px) {
