--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -9,7 +9,7 @@
   margin-bottom: 60px;
   @media screen and (min-width: 768px) {
     margin-right: 165px;
-    margin-left: 76px;
+    // margin-left: 76px;
   }
   @media screen and (min-width: 1200px) {
     margin-right: 0px;
