--- a/sass/components/_clients_section.scss
+++ b/sass/components/_clients_section.scss
@@ -3,8 +3,12 @@
   list-style-type: none;
   display: flex;
   flex-wrap: wrap;
-  gap: 30px;
+  gap: 15px;
   justify-content: center;
+
+  @media screen and (min-width: 768px) {
+    gap: 30px;
+  }
 
   @media screen and (min-width: 1200px) {
     flex-wrap: nowrap;
