--- a/sass/components/_team_section.scss
+++ b/sass/components/_team_section.scss
@@ -24,7 +24,7 @@
     flex-wrap: wrap;
     list-style-type: none;
     margin: 0 auto;
-    padding: 0px;
+    // padding: 0px;
 
     @media screen and (min-width: 1200px) {
       justify-content: space-between;
