--- a/sass/utils/_backdrop.scss
+++ b/sass/utils/_backdrop.scss
@@ -8,4 +8,5 @@
   background: var(--backdrop-color);
   transition: transform 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  z-index: 10;
 }
