--- a/sass/components/_clients_section.scss
+++ b/sass/components/_clients_section.scss
@@ -13,6 +13,8 @@
   @media screen and (min-width: 1200px) {
     flex-wrap: nowrap;
     justify-content: space-between;
+    gap: 25px;
+    padding-inline: 15px;
   }
 
   &__icon {
